--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -312,6 +312,15 @@ p {
     font-weight: bold;
     text-decoration: none;
 }
+.header-button {
+    line-height:8px;
+    height:41px;
+    padding-top:22px;
+}
+.header-button:hover {
+    border-bottom: 2px solid #ff9900;
+    text-decoration: none;
+}
 
 /* Hero Section 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -949,7 +958,7 @@ input[type="submit"]:disabled:focus {
 .dropdown-content {
     display: none;
     background-color: #FBFAF9;
-    margin-top: 3em;
+    margin-top: 2.5em;
     padding-top: 1em;
     padding-right: 1em;
     border-bottom: 1px solid #ff9900;
