--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,8 +60,7 @@
                         <!-- If on login page, show only signup button -->
                         <a href="{{ url_for('users.signup') }}"
                            title="{{ _('Sign up') }}"
-                           class="u-pull-right u-text-center"
-                           style="margin-top:22px; line-height:8px;">
+                           class="header-button u-pull-right u-text-center">
                             <img src="{{ url_for('static', filename='open-iconic/png/task-3x.png') }}">
                             <br>
                             <small>Signup</small>
@@ -70,8 +69,7 @@
                         <!-- If on signup page, show login button only -->
                         <a href="{{ url_for('users.login') }}"
                            title="{{ _('Log in') }}"
-                           class="u-pull-right"
-                           style="margin-top:22px; line-height:8px;">
+                           class="header-button u-pull-right">
                             <img src="{{ url_for('static', filename='open-iconic/png/account-login-3x.png') }}">
                             <br>
                             <small>Login</small>
@@ -118,16 +116,14 @@
                             <!-- Otherwise show both Login and Signup buttons at the same time -->
                             <a href="{{ url_for('users.login') }}"
                                title="{{ _('Log in') }}"
-                               class="u-pull-right u-add-margin-left"
-                               style="margin-top:22px; line-height:8px;">
+                               class="header-button u-pull-right u-add-margin-left">
                                 <img src="{{ url_for('static', filename='open-iconic/png/account-login-3x.png') }}">
                                 <br>
                                 <small>Login</small>
                             </a>
                             <a href="{{ url_for('users.signup') }}"
                                title="{{ _('Sign up') }}"
-                               class="u-pull-right u-text-center"
-                               style="margin-top:22px; line-height:8px;">
+                               class="header-button u-pull-right u-text-center">
                                 <img src="{{ url_for('static', filename='open-iconic/png/task-3x.png') }}">
                                 <br>
                                 <small>Signup</small>
