Actions slider was overlapping with add new action button in admin view

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -143,8 +143,11 @@
             </a>
         </div>
         {% endif %}
-
-        {{ render_action_list(actions.all()) }}
+    </div>
+    <div class="row">
+        <div class="twelve columns">
+            {{ render_action_list(actions.all()) }}
+        </div>
     </div>
     <div class="row">
         <div class="three columns">
