--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,8 +51,8 @@
                 <div class="twelve columns">
 
                     <!-- Logo -->
-                    <a class="u-link-color-override" href="{{ url_for('index') }}">
-                        <h4 class="title u-pull-left"><strong>SOLID</strong></h4>
+                    <a href="{{ url_for('index') }}" alt="solid" title="solid">
+                        <img class="title logo" src="{{ url_for('static', filename='images/solid_logo.png') }}">
                     </a>
                     
                     <!-- Login, Signup, Logout and Prifile buttons -->
