Small fix to modal styling

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -699,7 +699,8 @@ a.support-action {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .modal {
     visibility: hidden;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     position: fixed;
     left: 0px;
     top: 0px;
