--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -33,9 +33,32 @@ section (app/templates/styleguide/templating#)
         <a href="#" class="button-modal-close u-pull-right">
             <img src="/static/open-iconic/png/x-2x.png" alt="X" />
         </a>
-        <p class="u-cf">
+        <span id="action-description-{{ action.id }}" class="u-cf">
             {{ action.description|markdown }}
-        </p>
+        </span>
+        <span id="action-thanks-{{ action.id }}" class="u-cf" style="display:none;">
+            <p><strong>Thank you for taking this action on Solid!</strong> By letting friends know about it, you can help get this victory to the finish line. Sharing could inspire 3 or more actions for the {{ cause.title }} cause.</p>
+            <p class="u-text-center">
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ 
+                         url_for('causes.cause_detail', slug=cause.slug,
+                                 _external=True) | urlencode
+                                 }}#modal-action-{{ action.id }}" 
+                   target="_blank"
+                   class="u-add-margin-right"><img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}"></a>
+                <a href="https://twitter.com/home?status={{
+                         url_for('causes.cause_detail', slug=cause.slug,
+                                 _external=True) | urlencode
+                                 }}#modal-action-{{ action.id }}"
+                   target="_blank"
+                   class="u-add-margin-right"><img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}"></a>
+                <a href="https://plus.google.com/share?url={{
+                         url_for('causes.cause_detail', slug=cause.slug,
+                                 _external=True) | urlencode
+                                 }}#modal-action-{{ action.id }}" 
+                   target="_blank"><img class="icon-social" src="{{ url_for('static', filename='icons/googleplus-square.png') }}"></a>
+            </p>
+            <small>You've now taken {{ current_user.actions_per_cause(cause).count() }} action{% if current_user.actions_per_cause(cause).count() != 0 %}s{% endif %} on behalf of <a href="{{ url_for('causes.cause_detail', slug=cause.slug)}}">{{ cause.title }}</a>. Share your experience in the <a href="{{ url_for('posts.post_list', slug=cause.slug) }}">Conversation section</a> or check out <a href="{{ url_for('causes.cause_detail', slug=cause.slug) }}#actions">{{ cause.actions.count() }} other actions</a> that are available.</small>
+        </span>
         {% if current_user not in action.supporters.all() %}
         <p class="u-remove-margin-bottom u-pull-right">
             {% if action.link %}
@@ -59,7 +82,7 @@ section (app/templates/styleguide/templating#)
         </p>
         <p class="u-remove-margin-bottom u-pull-right">
             {% if action.link %}
-                <a class="button button-primary support" rel="external" target="_blank"
+                <a id="action-{{ action.id }}" class="button button-primary support" rel="external" target="_blank"
                    data-support-href="{{ url_for('causes.action_support', slug=cause.slug, pk=action.id) }}"
                    href="{{ action.link }}">{{ _('Go to 3rd party site') }}</a>
             {% endif %}
@@ -94,13 +117,3 @@ section (app/templates/styleguide/templating#)
     {{ render_action_modal(cause, action) }}
 {% endfor %}
 {% endmacro %}
-
-{% macro render_action_list_old(actions) %}
-{% for action in actions %}
-    {% if loop.first %}<div class="row">{% endif %}
-    {{ render_action(cause, action) }}
-    {% if loop.index is divisibleby(4) and not loop.last %}</div><div class="row">{% endif %}
-    {% if loop.last %}</div>{% endif %}
-{% endfor %}
-{% endmacro %}
-
