--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -66,20 +66,17 @@
             });
         });
 
-        $('a.support[rel=external]').click(function(e) {
-            //window.location.href = $(e.target).data('supportHref');
+        $('a.support').click(function(e) {
             var action_id = $(this).attr('id');
             var prefix = 'action-';
             action_id = parseInt(action_id.substring(prefix.length), 10);
 
             $.post('/cause/' + '{{ cause.slug }}' + '/actions/' + action_id + '/support'
-            ).done(function(action) {
-                $('#action-description-' + action_id).hide();
+            ).done(function() {
+                $('#modal-action-' + action_id + ' .oi').slideDown();
                 $('#action-thanks-' + action_id).show();
-                console.log(action['actionTaken']);
-                console.log(action['actionStatus']);
             }).fail(function() {
-                console.log("fail");
+                console.log('failed to support action ' + action_id);
             });
         });
 
