--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -10,7 +10,12 @@ section (app/templates/styleguide/templating#)
    {% endif %}
    >
     <div class="support-action-modal-description">
-        <h5 class="u-remove-margin-bottom">{{ action.title }}</h5>
+        <h5 class="u-remove-margin-bottom">
+            {% if current_user in action.supporters.all() %}
+            <span class="oi" data-glyph="check" style="color:#ff9900;"></span>
+            {% endif %}
+            {{ action.title }}
+        </h5>
         <article class="u-add-margin-top">{{ action.description|truncate(90, True) }}</article>
     </div>
     <small class="support-action-counter u-pull-left">
