--- a/app/templates/admin/cause_list.html
+++ b/app/templates/admin/cause_list.html
@@ -14,7 +14,7 @@
                 <span class="oi" data-glyph="caret-left" title="Back" aria-hidden="true"></span>
                 <span class="u-hide-on-mobile"> to Admin</span>
             </a>
-            <a href="{{ url_for('causes.cause_add') }}" 
+            <a href="{{ url_for('causes.cause_add_edit') }}" 
                title="Add new cause"
                class="button u-pull-right u-add-margin-top">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
@@ -64,7 +64,7 @@
                         <td colspan="4" class="u-text-right">
                             <small>
                                 Nothing here yet. 
-                                <a href="{{ url_for('causes.cause_add') }}"> Add a new cause</a>.
+                                <a href="{{ url_for('causes.cause_add_edit') }}"> Add a new cause</a>.
                             </small>
                         </td>
                     </tr> 
