--- a/app/templates/causes/action_single.html
+++ b/app/templates/causes/action_single.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="container u-add-margin-top">
     <div class="row">
-        <div class="one-half column">
+        <div class="two-thirds column">
             <h3 class="u-pull-left">
                 <span class="oi" 
                       data-glyph="check" 
@@ -17,7 +17,7 @@
                 {{ action.title }}
             </h3>
         </div>
-        <div class="one-half column">
+        <div class="one-third column">
             {% if current_user not in action.supporters.all() %}
             <p class="u-remove-margin-bottom u-pull-right">
                 {% if current_user.is_authenticated %}
@@ -50,8 +50,26 @@
         </div>
     </div>
     <div class="row">
-        <div class="one-half column">
+        <div class="two-thirds column">
             <p>{{ action.description|markdown }}</p>
+            {% if action.expiration %}
+            <small class="support-action-expiration">
+                Expires: {{ action.expiration.strftime('%b. %d, %Y') }}
+            </small>
+            {% endif %}
+        </div>
+        <div class="one-third column">
+            <p class="support-action-counter"> 
+                <img class="icon" src="{{ url_for('static', filename='open-iconic/png/bullhorn-2x.png') }}"> 
+                {{ _('%(count)s action takers', count=action.supporters.count()) }}
+            </p>
+            {% for supporter in action.supporters %}
+                {{ render_avatar(supporter) }}
+            {% endfor %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="twelve columns">
         </div>
     </div>
 </div>
