--- a/app/templates/email/digest.html
+++ b/app/templates/email/digest.html
@@ -14,39 +14,48 @@
 	}} summary  of Solid causes that you are helping win:
 </p>
 
-<h2>New actions available to take</h2>
+<p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
+	New actions available to take
+	<span style="float: right">
+		{{ actions_new|length }}
+	</span>
+</p>
 
-{% if actions_new %}
-<ul>
-{% for action in actions_new %}
-	<li>
-		<a href="{{ url_for('causes.cause_detail', slug=action.cause.slug, _external=True) }}#modal-action-{{ action.id }}">
-			{{ action.title }}
-		</a>
-	</li>
+<p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
+	New posts from the community
+	<span style="float: right">
+		{{ posts_new|length }}
+	</span>
+</p>
+
+<p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
+	Actions completed
+	<span style="float: right">
+		{{ actions_supporters|length }}
+	</span>
+</p>
+
+<p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
+	New supporters
+	<span style="float: right">
+		{{ causes_supporters|length }}
+	</span>
+</p>
+
+{% if highlights %}
+<h2>Highlights</h2>
+{% for highlight in highlights %}
+<p>
+	<span style="font-size: 80%; color: #161310; font-weight: bold;">
+		{{ highlight.type|upper }}
+	</span> 
+	<a style="color: #3299bb; font-weight: bold; text-decoration: none;" 
+			href="{{ highlight.url }}#modal-action-{{ highlight.id }}">
+		{{ highlight.title }}</a>: {{ highlight.summary }}
+</p>
 {% endfor %}
 </ul>
 {% endif %}
-
-
-<h2>New Posts</h2>
-
-{% if actions_new %}
-<ul>
-{% for post in posts_new %}
-	<li>
-    <a href="{{ url_for('posts.post_detail', slug=post.cause.slug, pk=post.id, _external=True) }}">
-			{{ post.title }}
-		</a>
-	</li>
-{% endfor %}
-</ul>
-{% endif %}
-
-
-<h2>Actions completed</h2>
-
-{{ actions_completed|length }}
 
 
 <p>Taking Actions and sharing helps your Solid Causes win. Thank you for all you're doing!</p>
