--- a/app/templates/causes/action_single.html
+++ b/app/templates/causes/action_single.html
@@ -39,15 +39,12 @@
     <div class="row">
         <div class="two-thirds column">
             <h3 class="u-pull-left">
-                <span class="oi" 
-                      data-glyph="check" 
-                      style="display:{% if current_user in action.supporters.all() %}inline{% else %}none{% endif %};"></span>  
                 {{ action.title }}
             </h3>
         </div>
         <div class="one-third column">
             {% if current_user not in action.supporters.all() %}
-            <p class="u-remove-margin-bottom u-pull-right">
+            <p class="u-remove-margin-bottom u-add-margin-left u-pull-right">
                 {% if current_user.is_authenticated %}
                     {% if action.link %}
                     <a id="action-{{ action.id }}" 
@@ -59,7 +56,7 @@
                     </a>
                     {% else %}
                     <a id="action-{{ action.id }}" 
-                       class="button button-primary support" 
+                       class="button button-primary support"  
                        href="{{ url_for('causes.action_support', slug=cause.slug, pk=action.id) }}">
                         {{ _('Support!') }}
                     </a>
@@ -72,7 +69,7 @@
                 {% endif %}
             </p>
             {% else %}
-            <p class="u-remove-margin-bottom u-pull-right">
+            <p class="u-remove-margin-bottom u-add-margin-left u-pull-right">
                 {% if action.link %}
                     <a id="action-{{ action.id }}" 
                        class="button button-primary support" 
@@ -86,7 +83,7 @@
             {% endif %}
 
             <p class="u-remove-margin-bottom u-pull-right">
-                <a class="button button-modal u-add-margin-right"
+                <a class="button button-modal"
                    data-target="modal-share">
                     {{ _('Share') }}
                 </a>
@@ -101,7 +98,7 @@
                     </a>
                     <p class="u-cf u-full-width u-text-center">
                         <a href="https://www.facebook.com/sharer/sharer.php?u={{
-                                 url_for('causes.cause_detail', slug=cause.slug,
+                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
                                          _external=True) | urlencode
                                  }}"
                            target="_blank"
@@ -109,7 +106,7 @@
                             <img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}">
                         </a>
                         <a href="https://twitter.com/home?status={{
-                                 url_for('causes.cause_detail', slug=cause.slug,
+                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
                                          _external=True) | urlencode
                                  }}"
                            target="_blank"
@@ -117,7 +114,7 @@
                             <img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}">
                         </a>
                         <a href="https://plus.google.com/share?url={{
-                                 url_for('causes.cause_detail', slug=cause.slug,
+                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id, 
                                          _external=True) | urlencode
                                  }}"
                            target="_blank">
