--- a/app/templates/causes/action_single.html
+++ b/app/templates/causes/action_single.html
@@ -44,11 +44,11 @@
         </div>
         <div class="one-third column">
             {% if current_user not in action.supporters.all() %}
-            <p class="u-remove-margin-bottom u-add-margin-left u-pull-right">
+            <p class="u-remove-margin-bottom u-pull-right u-add-margin-left">
                 {% if current_user.is_authenticated %}
                     {% if action.link %}
                     <a id="action-{{ action.id }}" 
-                       class="button button-primary support" 
+                       class="button button-primary support u-add-margin-left" 
                        rel="external" 
                        target="_blank"
                        href="{{ action.link }}">
@@ -56,23 +56,23 @@
                     </a>
                     {% else %}
                     <a id="action-{{ action.id }}" 
-                       class="button button-primary support"  
+                       class="button button-primary support u-add-margin-left"  
                        href="{{ url_for('causes.action_support', slug=cause.slug, pk=action.id) }}">
                         {{ _('Support!') }}
                     </a>
                     {% endif %}
                 {% else %} 
-                <a class="button button-primary support"
+                <a class="button button-primary support u-add-margin-left"
                    href="{{ url_for('users.login', next='/cause/' + cause.slug + '/actions/' + action.id|string) }}">
                     {{ _('Support!') }}
                 </a>
                 {% endif %}
             </p>
             {% else %}
-            <p class="u-remove-margin-bottom u-add-margin-left u-pull-right">
+            <p class="u-remove-margin-bottom u-pull-right">
                 {% if action.link %}
                     <a id="action-{{ action.id }}" 
-                       class="button button-primary support" 
+                       class="button button-primary support u-add-margin-left" 
                        rel="external" 
                        target="_blank"
                        href="{{ action.link }}">
@@ -82,53 +82,14 @@
             </p>
             {% endif %}
 
-            <p class="u-remove-margin-bottom u-pull-right">
-                <a class="button button-modal"
-                   data-target="modal-share">
-                    {{ _('Share') }}
-                </a>
-            </p>
-            <div id="modal-share" class="modal">
-                <div style="width:300px;">
-                    <h3 class="u-pull-left">
-                        {{ _('Share this cause') }}
-                    </h3>
-                    <a href="#" class="button-modal-close u-pull-right">
-                        <img src="/static/open-iconic/png/x-2x.png" alt="X" />
-                    </a>
-                    <p class="u-cf u-full-width u-text-center">
-                        <a href="https://www.facebook.com/sharer/sharer.php?u={{
-                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
-                                         _external=True) | urlencode
-                                 }}"
-                           target="_blank"
-                           class="u-add-margin-right">
-                            <img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}">
-                        </a>
-                        <a href="https://twitter.com/home?status={{
-                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
-                                         _external=True) | urlencode
-                                 }}"
-                           target="_blank"
-                           class="u-add-margin-right">
-                            <img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}">
-                        </a>
-                        <a href="https://plus.google.com/share?url={{
-                                 url_for('causes.view_single_action', slug=cause.slug, pk=action.id, 
-                                         _external=True) | urlencode
-                                 }}"
-                           target="_blank">
-                            <img class="icon-social" src="{{ url_for('static', filename='icons/googleplus-square.png') }}">
-                        </a>
-                    </p>
-                </div>
-            </div>
 
             {% if current_user in cause.creators.all() or current_user.is_admin %}
             <p class="u-remove-margin-bottom u-pull-right">
-                <a class="button primary u-add-margin-right" 
+                <a class="button primary" 
+                   title="Edit action"
                    href="{{ url_for('causes.action_add_edit', slug=cause.slug, pk=action.id) }}">
-                    {{ _('Edit') }}
+                    <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+                    <span>Edit</span>
                 </a>
             </p>
             {% endif %}
@@ -138,10 +99,35 @@
         <div class="two-thirds column">
             <p>{{ action.description|markdown }}</p>
             {% if action.expiration %}
-            <small class="support-action-expiration">
+            <small class="support-action-expiration u-pull-right">
                 Expires: {{ action.expiration.strftime('%b. %d, %Y') }}
             </small>
             {% endif %}
+            <span class="support-action-share">
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{
+                         url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
+                                 _external=True) | urlencode
+                         }}"
+                   target="_blank"
+                   class="u-add-margin-right">
+                    <img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}">
+                </a>
+                <a href="https://twitter.com/home?status={{
+                         url_for('causes.view_single_action', slug=cause.slug, pk=action.id,
+                                 _external=True) | urlencode
+                         }}"
+                   target="_blank"
+                   class="u-add-margin-right">
+                    <img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}">
+                </a>
+                <a href="https://plus.google.com/share?url={{
+                         url_for('causes.view_single_action', slug=cause.slug, pk=action.id, 
+                                 _external=True) | urlencode
+                         }}"
+                   target="_blank">
+                    <img class="icon-social" src="{{ url_for('static', filename='icons/googleplus-square.png') }}">
+                </a>
+            </span>
         </div>
         <div class="one-third column">
             <p class="support-action-counter u-pull-right"> 
